--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "systemjs-hmr",
   "version": "0.0.3",
   "description": "Hot Module Replacement Extention for SystemJS",
-  "main": "lib/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel lib -d dist",
+    "dev": "babel -w lib -d dist",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -16,5 +19,14 @@
     "url": "https://github.com/alexisvincent/systemjs-hmr/issues"
   },
   "homepage": "https://github.com/alexisvincent/systemjs-hmr#readme",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
