--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel lib -d dist",
     "dev": "babel -w lib -d dist",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "precommit": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,10 @@
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
-    "chokidar": "^1.6.1"
+    "husky": "^0.11.9",
+    "jspm": "^0.16.48"
   },
   "babel": {
     "presets": [
@@ -37,8 +40,13 @@
     ]
   },
   "jspm": {
+    "overrides": {
+      "ajv": {
+        "registry": "npm"
+      }
+    },
     "map": {
-      "next": "./dist/next.js"
+      "./next": "./dist/next.js"
     }
   }
 }
