--- a/package.json
+++ b/package.json
@@ -20,20 +20,17 @@
     "url": "https://github.com/alexisvincent/systemjs-hmr/issues"
   },
   "homepage": "https://github.com/alexisvincent/systemjs-hmr#readme",
-  "dependencies": {
-    "ajv": "^4.8.2"
-  },
   "devDependencies": {
+    "babel-preset-env": "^1.1.8",
     "babel-cli": "^6.16.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.18.0",
     "husky": "^0.11.9",
     "jspm": "^0.16.48"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "env"
     ],
     "plugins": [
       "transform-object-rest-spread"
