Trace by default; dud module in production; one off loading; roots -> entries

--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
       }
     },
     "map": {
-      "./next": "./dist/next.js"
+      "./next": {
+        "production": false,
+        "~production": "./dist/next.js"
+      }
     }
   },
   "dependencies": {
