--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-env": "^1.1.8",
+    "bluebird": "^3.4.7",
     "debug": "^2.6.1",
     "husky": "^0.11.9",
+    "imgraphjs": "0.0.32",
+    "immutable": "^3.8.1",
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^7.0.0",
