Fixed map to work with systemjs 20

--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     },
     "map": {
       "./dist/systemjs-hmr.js": {
-        "production": false,
-        "~production": "./dist/systemjs-hmr.js"
+        "production": false
       }
     }
   }
