--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.16.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.1.8",
+    "babel-runtime": "^6.23.0",
     "bluebird": "^3.4.7",
     "debug": "^2.6.1",
     "husky": "^0.11.9",
@@ -49,7 +50,8 @@
     ],
     "plugins": [
       "external-helpers",
-      "transform-object-rest-spread"
+      "transform-object-rest-spread",
+      "transform-runtime"
     ]
   },
   "jspmPackage": true,
