map to @empty not false

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     },
     "map": {
       "./dist/systemjs-hmr.js": {
-        "production": false
+        "production": "@empty"
       }
     }
   }
