--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     }
   },
   "dependencies": {
-    "@types/systemjs": "^0.20.2"
+    "@types/ramda": "^0.0.5",
+    "@types/systemjs": "^0.20.2",
+    "ramda": "^0.23.0"
   }
 }
